--- a/styles/scss/breakpoints/max-736/templates/_content.scss
+++ b/styles/scss/breakpoints/max-736/templates/_content.scss
@@ -16,6 +16,7 @@ article.post {
   }
 
   aside {
+    margin-top: 32px;
     text-align: left;
     flex-grow: 1;
 
